--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   height: 100vh;
+
   display: grid;
   grid-template: 1fr 6fr / 1fr 5fr;
   grid-template-areas:
@@ -9,7 +10,59 @@ body {
 
 .dashboard-left {
   grid-area: dash-left;
-  background-color: aquamarine;
+  background-color: #164e63;
+
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.sidebar-top,
+.sidebar-bottom {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-left: 3rem;
+
+  font-size: 24px;
+}
+
+img {
+  height: 40px;
+  width: auto;
+  color: white;
+}
+
+header {
+  margin: 1rem 0 0 1rem;
+}
+
+header img {
+  height: 60px;
+  width: auto;
+  align-self: center;
+}
+
+h1 {
+  font-size: 36px;
+  align-self: center;
+}
+
+header,
+.home,
+.profile,
+.messages,
+.history,
+.tasks,
+.communities,
+.settings,
+.support,
+.privacy {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+
+  color: white;
 }
 
 .dashboard-top {
@@ -19,5 +72,5 @@ body {
 
 .dashboard-center {
   grid-area: dash-center;
-  background-color: #94a3b8;
+  background-color: #e5e7eb;
 }
