Finish initial styling of dashboard's top

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   height: 100vh;
 
   display: grid;
-  grid-template: 1fr 6fr / 1fr 5fr;
+  grid-template: 1fr 8fr / 1fr 4fr;
   grid-template-areas:
     "dash-left dash-top"
     "dash-left dash-center";
@@ -10,7 +10,7 @@ body {
 
 .dashboard-left {
   grid-area: dash-left;
-  background-color: #164e63;
+  background-color: #c4b5fd;
 
   display: flex;
   flex-direction: column;
@@ -28,9 +28,8 @@ body {
 }
 
 img {
-  height: 40px;
+  height: 35px;
   width: auto;
-  color: white;
 }
 
 header {
@@ -68,9 +67,129 @@ header,
 .dashboard-top {
   grid-area: dash-top;
   background-color: #f8fafc;
+
+  display: grid;
+  gap: 3rem;
+  grid-template: 1fr 1fr / 7fr 3fr;
+  grid-template-areas:
+    "search search"
+    "welcome nav";
+
+  box-shadow: inset 0px -3px 2px rgba(0, 0, 0, 0.2);
+  border-style: i;
+}
+
+.search {
+  margin: 2rem 0 0 3rem;
+  grid-area: search;
+
+  display: grid;
+  grid-template-columns: 7fr 3fr;
+  align-items: center;
+  align-self: center;
+}
+
+.search-left {
+  display: grid;
+  grid-template-columns: 1fr 16fr;
+  margin-right: 1rem;
+}
+
+.search-bar {
+  height: 90%;
+  width: 85%;
+  border-radius: 10px;
+  background-color: darkgrey;
+}
+
+.search-right {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+
+  font-size: 24px;
+  font-weight: bold;
+  margin-right: 4rem;
+}
+
+.welcome-section {
+  grid-area: welcome;
+
+  display: grid;
+  gap: 2rem;
+  grid-template: 1fr 1fr / 1fr 3fr 3fr;
+  grid-template-areas:
+    "image greeting ."
+    "image greeting .";
+
+  justify-items: start;
+  align-items: start;
+}
+
+.user-image-big {
+  grid-area: image;
+
+  box-sizing: border-box;
+  padding-bottom: 1rem;
+
+  margin-left: 3rem;
+  height: 5rem;
+  width: 4rem;
+}
+
+.user-image-big img {
+  height: 100%;
+}
+
+.welcome-message {
+  grid-area: greeting;
+  font-weight: bold;
+  height: 5rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+span {
+  font-size: 16px;
+}
+
+.welcome-message span:last-child {
+  font-size: 28px;
+}
+
+.nav {
+  grid-area: nav;
+}
+
+nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 4rem;
+  margin-right: 4rem;
+}
+
+.btn {
+  width: 7rem;
+  height: 2.5rem;
+  border-radius: 16px;
+
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  background-color: #7c3aed;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .dashboard-center {
   grid-area: dash-center;
   background-color: #e5e7eb;
+
+  box-sizing: border-box;
+  min-width: none;
 }
