--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   height: 100vh;
 
@@ -10,7 +14,7 @@ body {
 
 .dashboard-left {
   grid-area: dash-left;
-  background-color: #c4b5fd;
+  background-color: #0ea5e9;
 
   display: flex;
   flex-direction: column;
@@ -112,6 +116,10 @@ header,
   margin-right: 4rem;
 }
 
+.name a {
+  color: black;
+}
+
 .welcome-section {
   grid-area: welcome;
 
@@ -123,13 +131,13 @@ header,
     "image greeting .";
 
   justify-items: start;
+  align-items: start;
 }
 
 .user-image-big {
   grid-area: image;
   align-self: center;
 
-  box-sizing: border-box;
   padding-bottom: 1rem;
 
   margin-left: 3rem;
@@ -178,7 +186,7 @@ nav ul {
   color: white;
   font-weight: bold;
   font-size: 20px;
-  background-color: #7c3aed;
+  background-color: #0ea5e9;
 
   display: flex;
   align-items: center;
@@ -186,12 +194,23 @@ nav ul {
   text-align: center;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .dashboard-center {
   grid-area: dash-center;
-  background-color: #e5e7eb;
+  background-color: #d6d3d1;
 
-  box-sizing: border-box;
   min-width: none;
+  padding: 2rem;
+  gap: 1rem;
 
   display: grid;
   grid-template: 1fr 9fr 9fr / 4fr 4fr 3fr;
@@ -203,14 +222,60 @@ nav ul {
 
 .articles-heading {
   grid-area: articles-heading;
+
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .announcements-heading {
   grid-area: announcements-heading;
+
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .articles-container {
   grid-area: articles-container;
+
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(2, 1fr);
+  gap: 2rem;
+}
+
+article {
+  width: calc(50% - calc((4 / 3) rem));
+  height: calc(33% - calc((4 / 3) rem));
+
+  background-color: #f5f5f4;
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  border-left: 1rem solid orange;
+  border-radius: 8px;
+  padding: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  transition: 0.3s ease;
+}
+
+article:hover {
+  scale: 1.05;
+}
+
+article h2 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+article .icons {
+  display: flex;
+  gap: 1rem;
+  align-self: end;
+}
+
+.icons div:hover {
+  cursor: pointer;
 }
 
 .announcements-container {
