--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,7 @@ article {
   height: calc(33% - calc((4 / 3) rem));
 
   background-color: #f5f5f4;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
   border-left: 1rem solid orange;
   border-radius: 8px;
   padding: 1rem;
@@ -260,10 +260,10 @@ article {
 }
 
 article:hover {
-  scale: 1.05;
+  scale: 1.02;
 }
 
-article h2 {
+article h3 {
   font-size: 24px;
   font-weight: bold;
 }
@@ -272,6 +272,8 @@ article .icons {
   display: flex;
   gap: 1rem;
   align-self: end;
+
+  margin-top: auto;
 }
 
 .icons div:hover {
@@ -280,8 +282,81 @@ article .icons {
 
 .announcements-container {
   grid-area: announcements-container;
+
+  height: 100%;
+  width: 100%;
+  background-color: #f5f5f4;
+  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  padding: 1rem;
+
+  display: grid;
+  gap: 1rem;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.an-top,
+.an-mid {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.an-top,
+.an-mid,
+.an-end {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.announcements-container h3 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.announcements-container p a {
+  color: black;
 }
 
 .trending-container {
   grid-area: trending-container;
+
+  display: grid;
+  grid-template: 1fr 9fr / 1fr;
+}
+
+.trending-people-container {
+  height: 100%;
+  width: 100%;
+  background-color: #f5f5f4;
+  box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  padding: 1rem;
+
+  display: grid;
+  gap: 1rem;
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.trending-person {
+  display: flex;
+  gap: 1rem;
+}
+
+.trending-person img {
+  align-self: center;
+
+  height: 4rem;
+  width: 4rem;
+}
+
+.trending-person-description {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+}
+
+h4 {
+  font-size: 20px;
 }
